<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/popup_back"
    android:gravity="center">

    <Button
        android:id="@+id/closeSettings"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_margin="20dp"
        android:background="@drawable/close"
        android:elevation="1dp" />

    <LinearLayout
        android:id="@+id/settingRl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingTop="7.5dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/pixel2"
            android:text="@string/settings"
            android:textColor="@android:color/black"
            android:textSize="40dp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="@drawable/audio" />

                    <SeekBar
                        android:id="@+id/audioBar"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginRight="50dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="@drawable/music" />

                    <SeekBar
                        android:id="@+id/musicBar"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginRight="50dp" />

                </LinearLayout>

                <Button
                    android:id="@+id/changeColor"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:background="#000000"
                    android:text="@string/change_background_color"
                    android:textColor="#ffffff" />

                <Button
                    android:id="@+id/changeControl"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:background="#000000"
                    android:text="@string/change_control_side_right"
                    android:textColor="#ffffff" />

                <Button
                    android:id="@+id/changeLang"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:background="#000000"
                    android:text="@string/lang_change"
                    android:textColor="#ffffff" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</RelativeLayout>
