<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/popup_back"
    android:gravity="center">

    <Button
        android:id="@+id/closeShop"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_margin="20dp"
        android:background="@drawable/close"
        android:elevation="1dp" />

    <ImageView
        android:id="@+id/shopCoinDisplay"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_toLeftOf="@id/closeShop"
        android:background="@drawable/coin"
        android:elevation="1dp" />

    <TextView
        android:id="@+id/shopCoins"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginRight="10dp"
        android:layout_toLeftOf="@id/shopCoinDisplay"
        android:elevation="1dp"
        android:fontFamily="@font/pixel2"
        android:gravity="right"
        android:text="100"
        android:textColor="@android:color/black"
        android:textSize="40dp" />

    <LinearLayout
        android:id="@+id/shopLl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pixel2"
            android:text="@string/shop"
            android:id="@+id/shopTitle"
            android:textColor="@android:color/black"
            android:textSize="50dp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:requiresFadingEdge="none"
                android:scrollbars="none">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/skin1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/pig1"
                            android:layout_width="184.68dp"
                            android:layout_height="150dp"
                            android:layout_margin="10dp"
                            android:background="@drawable/pig" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/pixel2"
                            android:text="@string/pig"
                            android:textColor="@android:color/black"
                            android:textSize="25dp" />

                        <LinearLayout
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:gravity="center_vertical">

                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/skin2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/pig2"
                            android:layout_width="184.68dp"
                            android:layout_height="150dp"
                            android:layout_margin="10dp"
                            android:background="@drawable/ninja" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/pixel2"
                            android:text="@string/ninja"
                            android:textColor="@android:color/black"
                            android:textSize="25dp" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical">

                            <TextView
                                android:id="@+id/cost2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/pixel2"
                                android:text="10"
                                android:textColor="@android:color/black"
                                android:textSize="25dp" />

                            <ImageView
                                android:id="@+id/coinDisplay2"
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:layout_marginLeft="3dp"
                                android:background="@drawable/coin" />
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/skin3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/pig3"
                            android:layout_width="184.68dp"
                            android:layout_height="150dp"
                            android:layout_margin="10dp"
                            android:background="@drawable/detective" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/pixel2"
                            android:text="@string/detective"
                            android:textColor="@android:color/black"
                            android:textSize="25dp" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical">

                            <TextView
                                android:id="@+id/cost3"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/pixel2"
                                android:text="50"
                                android:textColor="@android:color/black"
                                android:textSize="25dp" />

                            <ImageView
                                android:id="@+id/coinDisplay3"
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:layout_marginLeft="3dp"
                                android:background="@drawable/coin" />
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/skin4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/pig4"
                            android:layout_width="184.68dp"
                            android:layout_height="150dp"
                            android:layout_margin="10dp"
                            android:background="@drawable/superpig" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/pixel2"
                            android:text="@string/superpig"
                            android:textColor="@android:color/black"
                            android:textSize="25dp" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical">

                            <TextView
                                android:id="@+id/cost4"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/pixel2"
                                android:text="85"
                                android:textColor="@android:color/black"
                                android:textSize="25dp" />

                            <ImageView
                                android:id="@+id/coinDisplay4"
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:layout_marginLeft="3dp"
                                android:background="@drawable/coin" />
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/skin5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/pig5"
                            android:layout_width="184.68dp"
                            android:layout_height="150dp"
                            android:layout_margin="10dp"
                            android:background="@drawable/batpig" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/pixel2"
                            android:text="@string/batpig"
                            android:textColor="@android:color/black"
                            android:textSize="25dp" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical">

                            <TextView
                                android:id="@+id/cost5"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/pixel2"
                                android:text="125"
                                android:textColor="@android:color/black"
                                android:textSize="25dp" />

                            <ImageView
                                android:id="@+id/coinDisplay5"
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:layout_marginLeft="3dp"
                                android:background="@drawable/coin" />
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/skin6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/pig6"
                            android:layout_width="184.68dp"
                            android:layout_height="150dp"
                            android:layout_margin="10dp"
                            android:background="@drawable/moviepig" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/pixel2"
                            android:text="@string/movie_pig"
                            android:textColor="@android:color/black"
                            android:textSize="25dp" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical">

                            <TextView
                                android:id="@+id/cost6"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/pixel2"
                                android:text="175"
                                android:textColor="@android:color/black"
                                android:textSize="25dp" />

                            <ImageView
                                android:id="@+id/coinDisplay6"
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:layout_marginLeft="3dp"
                                android:background="@drawable/coin" />
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/skin7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/pig7"
                            android:layout_width="184.68dp"
                            android:layout_height="150dp"
                            android:layout_margin="10dp"
                            android:background="@drawable/witchpig" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/pixel2"
                            android:text="@string/witch"
                            android:textColor="@android:color/black"
                            android:textSize="25dp" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical">

                            <TextView
                                android:id="@+id/cost7"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/pixel2"
                                android:text="200"
                                android:textColor="@android:color/black"
                                android:textSize="25dp" />

                            <ImageView
                                android:id="@+id/coinDisplay7"
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:layout_marginLeft="3dp"
                                android:background="@drawable/coin" />
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/skin8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/pig8"
                            android:layout_width="184.68dp"
                            android:layout_height="150dp"
                            android:layout_margin="10dp"
                            android:background="@drawable/kingpig" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/pixel2"
                            android:text="@string/king"
                            android:textColor="@android:color/black"
                            android:textSize="25dp" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical">

                            <TextView
                                android:id="@+id/cost8"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/pixel2"
                                android:text="250"
                                android:textColor="@android:color/black"
                                android:textSize="25dp" />

                            <ImageView
                                android:id="@+id/coinDisplay8"
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:layout_marginLeft="3dp"
                                android:background="@drawable/coin" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </HorizontalScrollView>
        </ScrollView>
    </LinearLayout>
</RelativeLayout>
